<resources>
    <string name="app_name">MyiMet</string>
    <string name="people_details">People Details</string>
    <string name="add_people">Add People</string>

    <string name="hint_name">Name</string>
    <string name="hint_met_at">Met at</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_email">Email</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>

    <string name="people_id">PEOPLE_ID</string>

    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
</resources>