<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".ui.details.PeopleDetailsFragment">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_profile_image"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/hint_name" />

    <TextView
        android:id="@+id/textViewMet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_margin"
        android:drawableStart="@drawable/ic_met_at"
        android:drawableLeft="@drawable/ic_met_at"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:foreground="?android:attr/selectableItemBackground"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/buttonContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:drawableStart="@drawable/ic_contact"
                android:drawableLeft="@drawable/ic_contact"
                android:drawablePadding="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/hint_contact" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:drawableStart="@drawable/ic_gmail"
                android:drawableLeft="@drawable/ic_gmail"
                android:drawablePadding="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/hint_email" />

            <TextView
                android:id="@+id/textViewFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:drawableStart="@drawable/ic_facebook"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/hint_facebook" />

            <TextView
                android:id="@+id/textViewTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_twitter"
                android:drawableLeft="@drawable/ic_twitter"
                android:drawablePadding="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/hint_twitter" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
