<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".ui.add.AddPeopleFragment">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_profile_image"
        android:contentDescription="@string/app_name" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_name"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMetAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_met_at"
                    android:hint="@string/hint_met_at"
                    android:inputType="textPostalAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_contact"
                    android:hint="@string/hint_contact"
                    android:inputType="phone"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_facebook"
                    android:hint="@string/hint_facebook"
                    android:inputType="textUri"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_twitter"
                    android:hint="@string/hint_twitter"
                    android:inputType="textUri"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
